--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,1 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,500;1,400&display=swap');
+
+h1 {
+  color: beige;
+}
